--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -3,7 +3,8 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: "Nunito", sans-serif;
+$font-family-raleway-sans-serif: "Raleway", sans-serif;
+$font-family-montserrat-sans-serif: "Montserrat", sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
