--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,17 +1,11 @@
-
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Raleway:400,600');
 
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
-
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
+// Bulma CSS Framework
+@import '~bulma/bulma.sass';
 
 body {
   margin: 0;
@@ -20,6 +14,6 @@ body {
   font-weight: 400;
   line-height: 1.6;
   color: #212529;
-  text-align: left;
+  text-align: center;
   background-color: #f8fafc;
 }
