--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -1,8 +1,17 @@
-.navbar-item img {
-    max-width: 2.75rem;
+.jeepup-brand-icon {
+    min-width: 2.5rem;
+    padding-right: .1rem;
 }
 
 .brand-name {
     font-size: 1.5rem;
-    margin-left: .5rem;
+}
+
+nav .navbar-end .buttons {
+    justify-content: center;
+
+    @media only screen and (min-width: 1088px) {
+        justify-content: flex-start;
+    }
+    
 }
