--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,18 +1,20 @@
 
 // Body
-$body-bg: #f8fafc;
+$body-bg: white;
+
+// Site colors
+$main-site-color: #151D37;
+$secondary-site-color: #D84F4F;
 
 // Typography
 $font-family-raleway-sans-serif: "Raleway", sans-serif;
 $font-family-montserrat-sans-serif: "Montserrat", sans-serif;
+$font-family-faster-one-cursive: "Faster One", cursive;
 $font-size-base: 1rem;
 $line-height-base: 1.6;
 
 // Colors
 $blue: #3490dc;
-$indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66D9b;
 $red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
