--- a/resources/sass/_contact.scss
+++ b/resources/sass/_contact.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     text-align: center;
-    background: url('../../storage/app/public/images/pic1.jpg');
+    //background: url('../../storage/app/public/images/pic1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     position: center;
