--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -1,17 +1,28 @@
+nav { 
+    text-align: center;
+}
+
 .jeepup-brand-icon {
     min-width: 2.5rem;
     padding-right: .1rem;
 }
 
 .brand-name {
-    font-size: 1.75rem;
+    font-size: 2rem;
     font-family: $font-family-faster-one-cursive;
     color: $secondary-site-color;
-    // padding-left: 2rem;
 }
 
-#jeepup-navbar .navbar-item {
-    color: whitesmoke;
+a.navbar-item, a.navbar-link {
+    color: black;
+
+    @media only screen and(min-width: 1088px) {
+        color: white;
+    }
+}
+
+a.navbar-item:hover, a.navbar-link:hover {
+    color: $secondary-site-color;
 }
 
 .navbar {
@@ -24,6 +35,4 @@ nav .navbar-end .buttons {
     @media only screen and (min-width: 1088px) {
         justify-content: flex-start;
     }
-    
 }
-
