--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -16,7 +16,7 @@ nav {
 a.navbar-item, a.navbar-link {
     color: black;
 
-    @media only screen and(min-width: 1088px) {
+    @media only screen and (min-width: 1088px) {
         color: white;
     }
 }
@@ -34,5 +34,25 @@ nav .navbar-end .buttons {
 
     @media only screen and (min-width: 1088px) {
         justify-content: flex-start;
+    }
+}
+
+.button {
+    text-transform: uppercase;
+    border-color: $secondary-site-color;
+    border-width: 2px;
+    background-color: transparent;
+    color:  black;
+    //filter: invert(100%);
+
+    @media only screen and (min-width: 1088px) {
+        color: $secondary-site-color;
+    }
+}
+
+.button:hover {
+    @media only screen and (min-width: 1088px) {
+        color: #47DED6;
+        border-color: #47DED6;
     }
 }
