Change brand name styling for mobile screens. Add link references for 'Sign Up' and 'Login' buttons.

--- a/resources/sass/_footer.scss
+++ b/resources/sass/_footer.scss
@@ -2,11 +2,21 @@ $footer-bg-color: #33363D;
 
 footer {
     background-color: $footer-bg-color;
+    border-top: 3px solid $secondary-site-color;
     color: white;
     min-height: 10vh;
-    font-size: .95rem;
+    font-size: .55rem;
     text-align: center;
-    margin: 0;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+
+    @media only screen and (min-width: 768px) {
+        font-size: .65rem;
+    }
+
+    @media only screen and (min-width: 1088px) {
+        font-size: .75rem;
+    }
 }
 
 footer a {
@@ -16,5 +26,9 @@ footer a {
 .footer-brand {
     font-family: $font-family-faster-one-cursive;
     color: $secondary-site-color;
-    font-size: 1.1rem;
+    font-size: .75rem;
+
+    @media only screen and (min-width: 1088px) {
+        font-size: .9rem;
+    }
 }
