Master site layout (#19)
* Add Bulma CSS framework to the project. Ready to start master layout.

* Add basic navbar that still needs work. Need a new brand icon. Create symbolic link for images. Images are now stored in 'storage/app/public/images'.

* Making progress on the navbar. Needs additional color styling. Navbar now works properly on mobile.

* Add site colors, primary and secondary. Make navbar reflect new color scheme. Add brand font (faster-one).

* Footer is complete. Navbar links now set to secondary site color on hover. Still need to adjust side margins and padding for the navbar on mobile/tablet views. Main content set to min-height of 85vh.

* Sign up and Login button design. Add news and forum pages.

* Change brand name styling for mobile screens. Add link references for 'Sign Up' and 'Login' buttons.

* Change main content minimum height to 70vh.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,25 +1,30 @@
-
-// Fonts
+// Site Fonts
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Raleway:400,600');
+
+// Brand Font
+@import url('https://fonts.googleapis.com/css?family=Faster+One');
 
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
-
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
+// Bulma CSS Framework
+@import '~bulma/bulma.sass';
 
 body {
-  margin: 0;
-  font-family: 'Raleway', sans-serif;
-  font-size: 0.9rem;
-  font-weight: 400;
-  line-height: 1.6;
-  color: #212529;
-  text-align: left;
-  background-color: #f8fafc;
+    margin: 0;
+    font-family: $font-family-raleway-sans-serif;
+    font-size: $font-size-base;
+    font-weight: 400;
+    line-height: $line-height-base;
+    color: #212529;
+    background-color: $body-bg;
 }
+
+// Components
+@import 'navbar';
+@import 'main';
+@import 'footer';
+
+// Pages
+@import 'contact';
+@import 'about';
