--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,10 +10,23 @@
 // Bulma CSS Framework
 @import '~bulma/bulma.sass';
 
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
+  
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
 body {
+    position: relative;
     margin: 0;
     font-family: $font-family-raleway-sans-serif;
     font-size: $font-size-base;
+    min-height: 100%;
     font-weight: 400;
     line-height: $line-height-base;
     color: #212529;
@@ -28,3 +41,4 @@ body {
 // Pages
 @import 'contact';
 @import 'about';
+@import 'login';
