--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -18,7 +18,7 @@ $red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
 $green: #38c172;
-$teal: #4dc0b5;
+$teal: #47DED6;
 $cyan: #6cb2eb;
 
 // Override Bulma variables
