--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -40,8 +40,10 @@ body {
 @import './Components/button';
 @import './Components/icon';
 @import './Components/ahref';
+@import './Components/whitesmoke-section';
 
 // Pages
 @import './Pages/contact';
 @import './Pages/about';
 @import './Pages/login';
+@import './Pages/join';
