Login and Registration/Join Design (#21)
* Add Bulma CSS framework to the project. Ready to start master layout.

* Add basic navbar that still needs work. Need a new brand icon. Create symbolic link for images. Images are now stored in 'storage/app/public/images'.

* Making progress on the navbar. Needs additional color styling. Navbar now works properly on mobile.

* Add site colors, primary and secondary. Make navbar reflect new color scheme. Add brand font (faster-one).

* Footer is complete. Navbar links now set to secondary site color on hover. Still need to adjust side margins and padding for the navbar on mobile/tablet views. Main content set to min-height of 85vh.

* Sign up and Login button design. Add news and forum pages.

* Change brand name styling for mobile screens. Add link references for 'Sign Up' and 'Login' buttons.

* Change main content minimum height to 70vh.

* Start styling of login page. Footer is now stuck on the bottom for each page of the website.

* Login page design complete. Add ability to use font awesome icons via FA link. Create new directories for sass files (Components and Pages).

* Navbar 'Sign Up' button re-style. Reverse 'Sign Up' and 'Login' buttons on navbar. Fix home route. Rename 'sign up' button to 'join'.

* Join page layout complete. Add whitesmoke section CSS. Add default button (filled and empty) CSS.

--- a/resources/sass/Components/_navbar.scss
+++ b/resources/sass/Components/_navbar.scss
@@ -32,6 +32,14 @@ a.navbar-item:hover, a.navbar-link:hover {
     background-color: $main-site-color;
 }
 
+.navbar-burger {
+    color: $secondary-site-color;
+}
+
+.navbar-burger:hover {
+    color: $teal;
+}
+
 .navbar-burger span.small-burger {
     max-width: 20%;
 }
@@ -44,22 +52,16 @@ nav .navbar-end .buttons {
     }
 }
 
-.button {
-    text-transform: uppercase;
-    border-color: $secondary-site-color;
-    border-width: 2px;
-    background-color: transparent;
-    color:  black;
-    //filter: invert(100%);
-
+nav .button:hover {
     @media only screen and (min-width: 1088px) {
-        color: $secondary-site-color;
+        color: $teal;
+        border-color: $teal;
     }
 }
 
-.button:hover {
+nav .signup-button:hover {
     @media only screen and (min-width: 1088px) {
-        color: #47DED6;
-        border-color: #47DED6;
+        color: $teal;
+        border-color: $teal;
     }
 }
