--- a/resources/sass/Components/_main.scss
+++ b/resources/sass/Components/_main.scss
@@ -1,5 +1,5 @@
 // This SASS file is styling the main content for each page.
 
-main {
-    min-height: 70vh;
+.main-wrapper {
+    margin: 0 auto;
 }
