Add required attribute to contact page fields.

--- a/resources/sass/Components/_button.scss
+++ b/resources/sass/Components/_button.scss
@@ -28,6 +28,14 @@
     border-color: $main-site-color;
 
     @media only screen and (min-width: 1088px) {
+        color: $main-site-color;
+    }
+}
+
+nav.button-empty:hover {
+    border-color: $main-site-color;
+
+    @media only screen and (min-width: 1088px) {
         color: $white;
     }
 }
