--- a/resources/sass/Components/_footer.scss
+++ b/resources/sass/Components/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    position: absolute;
+    position: relative;
     right: 0;
     bottom: 0;
     left: 0;
@@ -17,7 +17,7 @@ footer {
 }
 
 .footer {
-    padding: 3rem 1.5rem 3rem 1.5rem;
+    padding: 1.5rem 1.5rem 1.5rem 1.5rem;
 }
 
 footer a {
