--- a/resources/sass/Components/_navbar.scss
+++ b/resources/sass/Components/_navbar.scss
@@ -4,7 +4,7 @@ nav {
 
 .brand-name {
     font-size: 1.3rem;
-    font-family: $font-family-faster-one-cursive;
+    font-family: $font-family-russo-one;
     color: $secondary-site-color;
 
     @media only screen and (min-width: 768px) {
