--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,7 +8,8 @@ $secondary-site-color: #D84F4F;
 // Typography
 $font-family-raleway-sans-serif: "Raleway", sans-serif;
 $font-family-montserrat-sans-serif: "Montserrat", sans-serif;
-$font-family-faster-one-cursive: "Faster One", cursive;
+$font-family-russo-one: 'Russo One', sans-serif;
+
 $font-size-base: 1rem;
 $line-height-base: 1.6;
 
