--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Raleway:400,600');
 
 // Brand Font
-@import url('https://fonts.googleapis.com/css?family=Faster+One');
+@import url('https://fonts.googleapis.com/css?family=Russo+One');
 
 // Variables
 @import 'variables';
