--- a/resources/sass/Pages/_about.scss
+++ b/resources/sass/Pages/_about.scss
@@ -1,11 +1,31 @@
-.about {
-    background-color: white;
-    height: 500px;
+.about-montserrat-p-text {
+    font-family: $font-family-montserrat-sans-serif;
     margin-top: 2rem;
 }
 
-.about-header {
-    color: $secondary-site-color;
-    font-size: 3rem;
-    line-height: 1;
+.about-laravel-text {
+    color: #e74430;
+}
+
+.about-laravel-text:hover {
+    text-decoration: underline;
+    color: #e74430;
+}
+
+.about-digitalocean-text {
+    color: #303fd9;
+}
+
+.about-digitalocean-text:hover {
+    text-decoration: underline;
+    color: #303fd9;
+}
+
+.about-github-text {
+    color: #24292e;
+}
+
+.about-github-text:hover {
+    text-decoration: underline;
+    color: #24292e;
 }
