--- a/resources/sass/Components/_button.scss
+++ b/resources/sass/Components/_button.scss
@@ -1,41 +1,33 @@
 .button-filled {
-    text-transform: uppercase;
-    border-color: $secondary-site-color;
-    border-width: 2px;
-    background-color: $secondary-site-color;
-    color: white;
+  text-transform: uppercase;
+  border-color: $tertiary-site-color;
+  border-width: 2px;
+  background-color: $tertiary-site-color;
+  color: $white-chocolate;
 }
 
 .button-filled:hover {
-    border-color: $secondary-site-color;
-    background-color: transparent;
-    color: black;
+  border-color: $tertiary-site-color;
+  background-color: transparent;
+  color: #000;
 }
 
 .button-empty {
-    text-transform: uppercase;
-    border-color: $secondary-site-color;
-    border-width: 2px;
-    background-color: transparent;
-    color: black;
+  text-transform: uppercase;
+  border-color: $tertiary-site-color;
+  border-width: 2px;
+  background-color: transparent;
+  color: $tertiary-site-color;
 
-    @media only screen and (min-width: 1088px) {
-        color: $secondary-site-color;
-    }
+  @media only screen and (min-width: 1088px) {
+    color: $tertiary-site-color;
+  }
 }
 
 .button-empty:hover {
-    border-color: $main-site-color;
+  border-color: $secondary-site-color;
 
-    @media only screen and (min-width: 1088px) {
-        color: $main-site-color;
-    }
-}
-
-nav.button-empty:hover {
-    border-color: $main-site-color;
-
-    @media only screen and (min-width: 1088px) {
-        color: $white;
-    }
+  @media only screen and (min-width: 1088px) {
+    color: $secondary-site-color;
+  }
 }
