Convert Contact Us form to Vue component. Add Vuelidate JS package for form validation within Vue components.

--- a/resources/sass/Components/_ahref.scss
+++ b/resources/sass/Components/_ahref.scss
@@ -5,3 +5,11 @@ a {
 a:hover {
   color: $secondary-site-color;
 }
+
+a:active {
+  color: $secondary-site-color;
+}
+
+a:visited {
+  color: $secondary-site-color;
+}
