--- a/resources/sass/Components/_button.scss
+++ b/resources/sass/Components/_button.scss
@@ -4,6 +4,7 @@
   border-width: 2px;
   background-color: $tertiary-site-color;
   color: $white-chocolate;
+  box-shadow: $box-shadow;
 }
 
 .button-filled:hover {
