--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -21,3 +21,4 @@ $line-height-base: 1.6;
 // Override Bulma variables
 $link-hover: $secondary-site-color;
 $footer-background-color: #212529;
+$box-shadow: 1px 0px 6px #333;
