Add people attending column to JeepMeets table. Add GitHub icon to footer.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -39,6 +39,10 @@ body {
   background-color: $body-bg;
 }
 
+.brand-name-non-navbar {
+  font-family: "Russo One", sans-serif;
+}
+
 // Components
 @import './Components/ahref';
 @import './Components/button';
