Complete registration form components and design. Add Buefy to the project.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -19,6 +19,7 @@ $font-size-base: 1rem;
 $line-height-base: 1.6;
 
 // Override Bulma variables
+$primary: $main-site-color;
 $link-hover: $secondary-site-color;
 $footer-background-color: #212529;
 $box-shadow: 1px 0px 6px #333;
