Fetch recent posts on the Main forum page. WIP

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,9 @@
 // Bulma CSS Framework
 @import '~bulma/bulma.sass';
 
+// Buefy Core CSS
+@import "~buefy/src/scss/buefy";
+
 // Font Awesome
 @import '~@fortawesome/fontawesome-free/scss/brands';
 @import '~@fortawesome/fontawesome-free/scss/regular';
