--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -21,5 +21,10 @@ $line-height-base: 1.6;
 // Override Bulma variables
 $primary: $main-site-color;
 $link-hover: $secondary-site-color;
+
 $footer-background-color: #212529;
+
 $box-shadow: 1px 0px 6px #333;
+
+$loading-background: rgba(54, 54, 54, 0.25);
+$loading-background-legacy: $tertiary-site-color;
