--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,8 @@
 // Variables
 @import 'variables';
 
+@import "~bulma/sass/utilities/_all";
+
 // Bulma CSS Framework
 @import '~bulma/bulma.sass';
 
