Update PHP and JavaScript packages.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,8 +13,8 @@
 // Bulma CSS Framework
 @import '~bulma/bulma.sass';
 
-// Buefy Core CSS
-@import "~buefy/src/scss/buefy";
+// Buefy Core CSS - Recent update from ^0.9.3 -> ^0.9.4 caused scss compilation issues
+// @import "~buefy/src/scss/buefy";
 
 // Font Awesome
 @import '~@fortawesome/fontawesome-free/scss/brands';
