--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,7 @@
 
 // Buefy Core CSS - Recent update from ^0.9.3 -> ^0.9.4 caused scss compilation issues
 // @import "~buefy/src/scss/buefy";
+@import "~buefy/dist/buefy.min.css";
 
 // Font Awesome
 @import '~@fortawesome/fontawesome-free/scss/brands';
