Registration still not working, even after Breeze scaffolding.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -45,6 +45,7 @@ body {
   line-height: $line-height-base;
   color: #212529;
   background-color: $body-bg;
+  // background-color: rgba(247,250,252,var(--bg-opacity))
 }
 
 .brand-name-non-navbar {
