Authentication, registration, login, verification working properly. Publish email templates to change later.

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -25,6 +25,7 @@ $link-hover: $secondary-site-color;
 $footer-background-color: #212529;
 
 $box-shadow: 1px 0px 6px #333;
+$box-radius: 2px;
 
 $loading-background: #FFFFFF;
 $loading-overlay-min-height: 20vh;
